<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/headline_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/headline"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photo_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/no_image_available"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline_view" />

    <TextView
        android:id="@+id/url_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_text"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_label" />

    <TextView
        android:id="@+id/url_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/url"
        app:layout_constraintBottom_toBottomOf="@+id/url_label"
        app:layout_constraintStart_toEndOf="@+id/url_label"
        app:layout_constraintTop_toTopOf="@+id/url_label" />

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/section_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/body_view" />

    <TextView
        android:id="@+id/section_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/section_label"
        app:layout_constraintStart_toEndOf="@+id/section_label"
        app:layout_constraintTop_toTopOf="@+id/section_label" />

    <ImageButton
        android:id="@+id/see_later"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/cardview_light_background"
        android:contentDescription="@string/saves_the_new_into_the_database"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_time_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/photo_view"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/body_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_view" />

</android.support.constraint.ConstraintLayout>