<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    card_view:cardCornerRadius="13dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/headline_preview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:singleLine="false"
            android:text="@string/headline"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/section_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/section"
            card_view:layout_constraintBottom_toBottomOf="@+id/section_label"
            card_view:layout_constraintStart_toEndOf="@+id/section_label"
            card_view:layout_constraintTop_toTopOf="@+id/section_label" />

        <ImageButton
            android:id="@+id/see_later"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="@string/saves_the_new_into_the_database"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_time_24dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/headline_preview" />

        <TextView
            android:id="@+id/section_label"
            android:layout_width="52dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/section_text"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/headline_preview" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>